# stud

./: .gitignore  README.md
iel/: projekt.tex
iel/octave/: uloha3.m  uloha4.m
iel/src/: titulka.tex  uloha1.tex  uloha2.tex  uloha3.tex  uloha4.tex  uloha5.tex  zaver.tex
ija/ijahw2/: ijahw2.properties  ijahw2.xml
ijc/projekt/: Makefile  bit_array.h  du1-obrazek.ppm  eratosthenes.c  eratosthenes.h  error.c  error.h  ppm.c  ppm.h  primes  primes-inline  primes.c  steg-decode  steg-decode.c
ijc/projekt2/: Makefile  htable_clear.c  htable_foreach.c  htable_free.c  htable_hash_function.c  htable_init.c  htable_init2.c  htable_lookup_add.c  htable_remove.c  io.c  io.h  tail  tail.c  tail2  tail2.cc  vstup.txt  wordcount  wordcount-dynamic  wordcount.c
inc/: fsm.vhd
inp/Projekt2/: login.b
ios/proj1/: dirstat
ios/proj2/: Makefile  contributors.txt  proj2  proj2.c  proj2_car.c  proj2_car.h  proj2_passenger.c  proj2_passenger.h  proj2_sharedres.c  proj2_sharedres.h
ipk/projekt1/: CMakeCache.txt  CMakeLists.txt  FileController.cpp  FileController.h  Http.cpp  Http.h  IPKUtils.cpp  IPKUtils.h  Makefile  Rozsirenia  client.cpp  cmake_install.cmake  ftrest  ftrestd  http.cpp  http.h  main.cpp  readme.md  server.cpp  test.cpp
ipk/projekt2/: FileController.cpp  Makefile  client.cpp  ipk-client  xkulic03.tgz
ipp/php-xtd/: README.md  XTD-doc.md  testC01.in  testC02.in  testC03.in  testC04.in  testC05.in  (+18 more)
its/: docker-compose.yml  testcases.md  testplan.md
itu/: README.md
ius/: Projekt.mdj  proj.tex
izg/: izg_proj  main.c  output.ps  student.c  student.h
(+80 files in other folders)
